tried to fix scrolling map jumpiness

--- a/css/main.css
+++ b/css/main.css
@@ -2174,27 +2174,31 @@ h1.landing-page {
   #landing-page-hero #musical-notes-map {
     background-image: url("../img/landing-page/musical-notes-map.png");
     height: 100%;
-    margin-left: -1010em;
+    margin-left: -1035px;
     position: absolute;
-    width: 5000em;
+    width: 5000px;
     z-index: -1;
-    -webkit-animation: moveSlideshow 20s linear infinite normal forwards;
-    animation: moveSlideshow 20s linear infinite normal forwards;
+    -webkit-animation: moveSlideshow 30s linear infinite normal forwards;
+		-moz-animation: moveSlideshow 30s linear infinite normal forwards;
+        	-ms-animation: moveSlideshow 30s linear infinite normal forwards;
+         		-o-animation: moveSlideshow 30s linear infinite normal forwards;
+    				animation: moveSlideshow 30s linear infinite normal forwards;
     -webkit-transition: opacity 0.5s ease-out linear infinite normal forwards;
-    transition: opacity 0.5s ease-out linear infinite normal forwards; }
+    transition: opacity 0.5s ease-out linear infinite normal forwards;
+	animation-fill-mode: forwards; }
 
 @-webkit-keyframes moveSlideshow {
   0% {
     left: 0; }
 
   100% {
-    left: 1010px; } }
+    left: 1055px; } }
 @keyframes moveSlideshow {
   0% {
     left: 0; }
 
   100% {
-    left: 1010px; } }
+    left: 1055px; } }
 /* ===================================
     Stage
 =================================== */
